[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dust-raffle"
version = "0.0.1"
dependencies = [
    "python-bitcoinlib >= 0.12"
]
requires-python = ">= 3.11"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0"
]
